test_pascal/autofix/unconvert_type/constant/var_constant2.pas
const
  a : longint = 1;
var
  b : string; //longint expect
begin
  b := a; //error
end.
